Changed to express server

--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src='./lib/jquery-1.11.3.min.js'></script>
-  <script src='src/rps.js'></script>
-  <script src='src/application.js'></script>
+  <script src='/bower_components/jquery/dist/jquery.min.js'></script>
+  <script src='/src/rps.js'></script>
+  <script src='/src/application.js'></script>
 </head>
 <header>
 <h1><center>RPS Javascript Challenge</center></h1>
