updated readme, enabled bootstrap

--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
   <script src='/bower_components/jquery/dist/jquery.min.js'></script>
   <script src='/src/rps.js'></script>
   <script src='/src/application.js'></script>
 </head>
-<header>
+<header class='jumbotron'>
 <h1><center>RPS Javascript Challenge</center></h1>
 </header>
 <body><center>
